kube-lego/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress  
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mymicroservices.xpirit.com
    secretName: tls-kubelego
  rules:
  - host: mymicroservices.xpirit.com
    http:
      paths:
      - path: /mywebapi
        backend:
          serviceName: myapiservice
          servicePort: 80        
      - path: /myotherwebapi
        backend:
          serviceName: myotherwebapiservice
          servicePort: 80
